Fix social icons on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -196,6 +196,7 @@ a:hover {
 .social-icons svg {
   width: 26px;
   height: 26px;
+  flex-shrink: 0;
 }
 
 .social-icons a:hover {
